RESOLVED FIXED149204
Simple line layout: Glitch selecting long text.
https://bugs.webkit.org/show_bug.cgi?id=149204
Summary Simple line layout: Glitch selecting long text.
alan
Reported 2015-09-15 20:33:57 PDT
1. Go to https://webkit-queues.webkit.org/results/157785 2. Resize the window so that the first line is exactly Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=ews103', 'build', '--no-clean', '-- 3. Scroll to the bottom of the document 4. Try to select last few lines of the text * RESULTS The text moves as you select it.
Attachments
Patch (134.29 KB, patch)
2015-09-15 20:52 PDT, alan
no flags
Patch (6.36 KB, patch)
2015-09-15 21:06 PDT, alan
no flags
Patch (7.02 KB, patch)
2015-09-16 09:08 PDT, alan
no flags
alan
Comment 1 2015-09-15 20:34:19 PDT
alan
Comment 2 2015-09-15 20:52:19 PDT
Antti Koivisto
Comment 3 2015-09-15 20:56:52 PDT
Comment on attachment 261292 [details] Patch Could the test case create the renderer boundary by adding text node from js rather having all this "foobar foobar" filler?
alan
Comment 4 2015-09-15 21:06:05 PDT
WebKit Commit Bot
Comment 5 2015-09-15 23:07:31 PDT
Comment on attachment 261293 [details] Patch Clearing flags on attachment: 261293 Committed r189847: <http://trac.webkit.org/changeset/189847>
WebKit Commit Bot
Comment 6 2015-09-15 23:07:35 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2015-09-15 23:51:41 PDT
WebKit Commit Bot
Comment 8 2015-09-15 23:55:00 PDT
Re-opened since this is blocked by bug 149208
alan
Comment 9 2015-09-16 09:08:04 PDT
WebKit Commit Bot
Comment 10 2015-09-16 10:32:01 PDT
Comment on attachment 261310 [details] Patch Clearing flags on attachment: 261310 Committed r189870: <http://trac.webkit.org/changeset/189870>
WebKit Commit Bot
Comment 11 2015-09-16 10:32:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.