Simple line layout: Glitch selecting long text. https://bugs.webkit.org/show_bug.cgi?id=149204 rdar://problem/22646472

Reviewed by Antti Koivisto.

When long text is split into multiple RenderText objects, we ignore renderer boundaries while
collecting wrapping positions (so that we don't end up wrapping unbreakable fragments at the end of each renderer).
This patch ensures that fragments with hypen character ignore renderer boundaries too.

Source/WebCore:

Test: fast/text/multiple-renderers-with-hypen-on-boundary.html

* rendering/SimpleLineLayoutTextFragmentIterator.cpp:
(WebCore::SimpleLineLayout::TextFragmentIterator::skipToNextPosition):

LayoutTests:

* fast/text/multiple-renderers-with-hypen-on-boundary-expected.html: Added.
* fast/text/multiple-renderers-with-hypen-on-boundary.html: Added.


Canonical link: https://commits.webkit.org/167304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189847 268f45cc-cd09-0410-ab3c-d52691b4dbfc